--- a/index.html
+++ b/index.html
@@ -1,15 +1,45 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Echome Énergies - Installations solaires professionnelles</title>
-  <meta name="description" content="Échome Énergies accompagne entreprises et collectivités pour des installations photovoltaïques rentables et certifiées RGE.">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <title>Formulaire professionnel photovoltaïque | Échome Énergies</title>
+  <meta name="description" content="Remplissez ce formulaire pour obtenir un devis personnalisé et rapide pour votre projet photovoltaïque professionnel. Données sécurisées, experts certifiés.">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://echome-energies.fr/formulaire-pro/">
+
+  <!-- Open Graph pour partage sur réseaux sociaux -->
+  <meta property="og:title" content="Formulaire professionnel photovoltaïque | Échome Énergies">
+  <meta property="og:description" content="Demandez votre devis solaire personnalisé en quelques clics.">
+  <meta property="og:url" content="https://echome-energies.fr/formulaire-pro/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://echome-energies.fr/assets/og-image.jpg">
+
+  <!-- Données structurées Schema.org -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "name": "Installation photovoltaïque professionnelle",
+    "provider": {
+      "@type": "Organization",
+      "name": "Échome Énergies",
+      "url": "https://echome-energies.fr"
+    },
+    "areaServed": "France",
+    "description": "Service de devis et d'installation de panneaux solaires pour bâtiments professionnels",
+    "serviceType": "Installation photovoltaïque",
+    "url": "https://echome-energies.fr/formulaire-pro/"
+  }
+  </script>
+
+  <!-- Favicon et ressources -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="/styles/main.min.css">
+  <script defer src="/scripts/form.min.js"></script>
 </head>
-<body>
+
+  <body>
 
 <header>
   <img src="logo.png" alt="Logo Echome Énergies" class="logo">
