--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <p>1159 Rue de la Galandrine, 38210 Saint-Quentin-sur-Isère</p>
       <p>Tél : <a href="tel:+33476373462">04 76 37 34 62</a></p>
       <p>Email : <a href="mailto:accueil@echome-energies.fr">accueil@echome-energies.fr</a></p>
-      <p>SIRET : 98010975500010 - RCS Grenoble</p>
+      <p>SIRET : 980 109 755 00010 - RCS Grenoble</p>
     </div>
     <div class="footer-col">
       <p><a href="cgv.html">CGV</a></p>
