--- a/index.html
+++ b/index.html
@@ -1,128 +1,121 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Étude solaire professionnelle | Optimisez vos bâtiments | Échome Énergies</title>
-  <meta name="description" content="Étude solaire gratuite et personnalisée pour entreprises, collectivités et promoteurs. Optimisez vos toitures, réduisez vos coûts et valorisez votre patrimoine.">
-  <meta name="keywords" content="photovoltaïque professionnel, énergie solaire entreprise, autoconsommation B2B, étude solaire gratuite, Echome Énergies">
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Échome Énergies – Solutions photovoltaïques pour professionnels</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="Logo Echome Énergies" class="logo" />
+
+  <!-- HERO -->
+  <header class="hero">
+    <div class="overlay">
+      <img src="logo.png" alt="Logo Échome Énergies" class="logo" />
+      <div class="hero-content">
+        <h1>Un investissement durable, une rentabilité immédiate</h1>
+        <p>
+          Recevez votre <strong>étude gratuite et personnalisée</strong>.<br>
+          Réponse garantie sous 48h par un expert Échome Énergies.
+        </p>
+        <a href="#formulaire" class="btn-cta">📩 Demander mon étude</a>
+      </div>
+    </div>
   </header>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h1>Étude solaire pour les professionnels</h1>
-      <p>Des solutions photovoltaïques adaptées à votre structure pour réduire vos coûts et valoriser vos bâtiments.</p>
-    </div>
+  <!-- INTRO -->
+  <section class="intro">
+    <h2>Des solutions solaires pensées pour les entreprises et collectivités</h2>
+    <p>
+      Ombrières, toitures industrielles, bâtiments tertiaires…  
+      Nos experts vous accompagnent de l’étude jusqu’à l’installation,  
+      avec un suivi complet et <strong>certifié RGE</strong>.
+    </p>
   </section>
 
-  <section id="cta">
-    <div class="cta-box">
-      <h2>Un investissement durable, une rentabilité immédiate.</h2>
-      <h3>Recevez votre étude gratuite et personnalisée</h3>
-      <p><strong>Réponse garantie sous 48h</strong> par un expert Échome Énergies.</p>
-    </div>
-  </section>
-
-  <!-- 🔥 Nouvelle section visuelle dédiée B2B -->
-  <section class="visuel-pro">
-    <div class="overlay">
-      <h2>Des solutions solaires pensées pour les entreprises et collectivités</h2>
-      <p>Ombrières, toitures industrielles, bâtiments tertiaires… Nos experts vous accompagnent de l’étude jusqu’à l’installation, avec un suivi complet et certifié RGE.</p>
-    </div>
-  </section>
-
-  <section id="formulaire">
+  <!-- FORMULAIRE -->
+  <section id="formulaire" class="form-section">
     <h2>Demandez votre étude gratuite</h2>
-    <form id="contact-form">
+    <form action="https://formspree.io/f/your-id" method="POST">
+      <label>Type de structure</label>
       <select name="structure" required>
-        <option value="">Type de structure</option>
+        <option value="">-- Sélectionnez --</option>
         <option>Entreprise</option>
         <option>Collectivité</option>
-        <option>Artisan / Commerce</option>
+        <option>Artisan</option>
         <option>Promoteur immobilier</option>
         <option>Autre</option>
       </select>
+
+      <label>Type de bâtiment</label>
       <select name="batiment" required>
-        <option value="">Type de bâtiment</option>
-        <option>Entrepôt / Industriel</option>
+        <option value="">-- Sélectionnez --</option>
+        <option>Toiture industrielle</option>
         <option>Bâtiment tertiaire</option>
-        <option>Collectivité / Équipement public</option>
         <option>Ombrière de parking</option>
         <option>Autre</option>
       </select>
-      <input type="text" name="localisation" placeholder="Localisation du projet" required />
-      <input type="number" name="puissance" placeholder="Puissance souhaitée (kWc)" />
-      <textarea name="message" placeholder="Précisez vos besoins ou autres informations utiles..." rows="4"></textarea>
-      <input type="text" name="nom" placeholder="Votre nom / société" required />
-      <input type="email" name="email" placeholder="Votre email professionnel" required />
-      <input type="tel" name="telephone" placeholder="Votre téléphone" required />
-      <div class="g-recaptcha" data-sitekey="6Letqa0rAAAAAFXWiBwhwkZUEkcTfsZd802QdUtu"></div>
-      <button type="submit" class="btn-submit">☀️ Oui, je veux mon étude solaire</button>
+
+      <label>Localisation du projet</label>
+      <input type="text" name="localisation" required>
+
+      <label>Puissance souhaitée (kWc)</label>
+      <input type="number" name="puissance" min="1" required>
+
+      <label>Coordonnées professionnelles</label>
+      <input type="text" name="nom" placeholder="Nom / Société" required>
+      <input type="email" name="email" placeholder="Email professionnel" required>
+      <input type="tel" name="tel" placeholder="Téléphone" required>
+
+      <label>Message complémentaire (optionnel)</label>
+      <textarea name="message"></textarea>
+
+      <button type="submit" class="btn-cta">✅ Envoyer ma demande</button>
     </form>
-    <div id="confirmationMessage" class="hidden">✅ Merci, nous reviendrons vers vous sous 48h.</div>
-    <p class="confidentialite"><span class="lock-icon">🔒</span> Vos données sont strictement confidentielles.</p>
+    <p class="confidentialite">
+      🔒 Vos données sont strictement confidentielles et utilisées uniquement pour votre demande d’étude.
+    </p>
   </section>
 
+  <!-- FOOTER -->
   <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-left">
-        <p><strong>Échome Énergies</strong></p>
+    <div class="footer-top">
+      <div class="footer-col">
+        <h3>Échome Énergies</h3>
         <p>1159 Rue de la Galandrine<br>38210 Saint-Quentin-sur-Isère</p>
-        <p>📞 04 76 37 34 62</p>
-        <p>✉️ contact@echome-energies.fr</p>
+        <p>📞 <a href="tel:0476373462">04 76 37 34 62</a><br>
+        ✉️ <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
       </div>
-      <div class="footer-middle">
-        <h3>Nos certifications</h3>
+
+      <div class="footer-col">
+        <h3>Certifications</h3>
         <div class="certifications">
-          <img src="logo-rge.png" alt="RGE" />
-          <img src="logo-qualipv500.png" alt="QualiPV 500" />
-          <img src="logo-recharge-elec.png" alt="Recharge Elec+" />
+          <img src="logo-rge.png" alt="Certification RGE">
+          <img src="logo-qualipv500.png" alt="QualiPV 500">
+          <img src="logo-recharge-elec.png" alt="Recharge Elec+">
         </div>
-        <p><a href="https://www.qualit-enr.org/entreprises/echome-energies/" target="_blank">Voir nos certifications</a></p>
+        <p class="cert-text">Votre garantie d’un partenaire fiable et qualifié.</p>
       </div>
-      <div class="footer-right">
-        <h3>Suivez-nous</h3>
-        <a href="https://www.linkedin.com/company/echome-energies" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://www.facebook.com/profile.php?id=61563413785578" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://www.instagram.com/echomenergies" target="_blank"><i class="fab fa-instagram"></i></a>
+
+      <div class="footer-col">
+        <h3>Liens utiles</h3>
+        <ul>
+          <li><a href="cgv.html">Conditions Générales de Vente</a></li>
+          <li><a href="mentions-legales.html">Mentions légales</a></li>
+          <li><a href="politique-confidentialite.html">Politique de confidentialité</a></li>
+        </ul>
+        <div class="socials">
+          <a href="https://www.linkedin.com/company/echome-energies" target="_blank">LinkedIn</a> |
+          <a href="https://www.facebook.com/profile.php?id=61563413785578" target="_blank">Facebook</a> |
+          <a href="https://www.instagram.com/echomenergies" target="_blank">Instagram</a>
+        </div>
       </div>
     </div>
+
     <div class="footer-bottom">
-      <a href="cgv.html">CGV</a> | 
-      <a href="mentions-legales.html">Mentions légales</a> | 
-      <a href="politique-confidentialite.html">Politique de confidentialité</a>
+      <p>&copy; 2025 Échome Énergies – Partenaire certifié pour vos projets solaires</p>
     </div>
-    <p>&copy; 2025 Echome Énergies - Tous droits réservés</p>
   </footer>
 
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const form = document.getElementById("contact-form");
-      const confirmation = document.getElementById("confirmationMessage");
-      form.addEventListener("submit", async function (e) {
-        e.preventDefault();
-        const formData = new FormData(form);
-        const response = await fetch("https://formspree.io/f/xjkoqjky", {
-          method: "POST",
-          headers: { Accept: "application/json" },
-          body: formData
-        });
-        if (response.ok) {
-          confirmation.classList.remove("hidden");
-          confirmation.scrollIntoView({ behavior: "smooth" });
-          form.reset();
-        } else {
-          alert("Une erreur est survenue. Veuillez réessayer.");
-        }
-      });
-    });
-  </script>
 </body>
 </html>
