--- a/index.html
+++ b/index.html
@@ -10,91 +10,97 @@
 
   <!-- HERO -->
   <header class="hero">
-    <div class="overlay">
-      <img src="logo.png" alt="Logo Échome Énergies" class="logo" />
+    <div class="hero-overlay">
+      <img src="logo.png" alt="Échome Énergies" class="logo">
       <div class="hero-content">
         <h1>Un investissement durable, une rentabilité immédiate</h1>
-        <p>
-          Recevez votre <strong>étude gratuite et personnalisée</strong>.<br>
-          Réponse garantie sous 48h par un expert Échome Énergies.
-        </p>
-        <a href="#formulaire" class="btn-cta">📩 Demander mon étude</a>
+        <p>Recevez votre étude gratuite et personnalisée.<br>Réponse garantie sous 48h par un expert Échome Énergies.</p>
+        <a href="#formulaire" class="cta">Demander mon étude</a>
       </div>
     </div>
   </header>
 
   <!-- INTRO -->
   <section class="intro">
-    <h2>Des solutions solaires pensées pour les entreprises et collectivités</h2>
-    <p>
-      Ombrières, toitures industrielles, bâtiments tertiaires…  
-      Nos experts vous accompagnent de l’étude jusqu’à l’installation,  
-      avec un suivi complet et <strong>certifié RGE</strong>.
-    </p>
+    <div class="container">
+      <h2>Des solutions solaires pensées pour les entreprises et collectivités</h2>
+      <p>Ombrières, toitures industrielles, bâtiments tertiaires…  
+         Nos experts vous accompagnent de l’étude jusqu’à l’installation, avec un suivi complet et certifié RGE.</p>
+    </div>
   </section>
 
   <!-- FORMULAIRE -->
   <section id="formulaire" class="form-section">
-    <h2>Demandez votre étude gratuite</h2>
-    <form action="https://formspree.io/f/your-id" method="POST">
-      <label>Type de structure</label>
-      <select name="structure" required>
-        <option value="">-- Sélectionnez --</option>
-        <option>Entreprise</option>
-        <option>Collectivité</option>
-        <option>Artisan</option>
-        <option>Promoteur immobilier</option>
-        <option>Autre</option>
-      </select>
+    <div class="container">
+      <h2>Demandez votre étude gratuite</h2>
+      <form action="https://formspree.io/f/your-id" method="POST">
+        
+        <label for="structure">Type de structure</label>
+        <select name="structure" id="structure" required>
+          <option value="">-- Sélectionnez --</option>
+          <option value="entreprise">Entreprise</option>
+          <option value="collectivite">Collectivité</option>
+          <option value="artisan">Artisan</option>
+          <option value="promoteur">Promoteur</option>
+          <option value="autre">Autre</option>
+        </select>
 
-      <label>Type de bâtiment</label>
-      <select name="batiment" required>
-        <option value="">-- Sélectionnez --</option>
-        <option>Toiture industrielle</option>
-        <option>Bâtiment tertiaire</option>
-        <option>Ombrière de parking</option>
-        <option>Autre</option>
-      </select>
+        <label for="batiment">Type de bâtiment</label>
+        <select name="batiment" id="batiment" required>
+          <option value="">-- Sélectionnez --</option>
+          <option value="industriel">Industriel</option>
+          <option value="tertiaire">Tertiaire</option>
+          <option value="agricole">Agricole</option>
+          <option value="autre">Autre</option>
+        </select>
 
-      <label>Localisation du projet</label>
-      <input type="text" name="localisation" required>
+        <label for="localisation">Localisation du projet</label>
+        <input type="text" id="localisation" name="localisation" placeholder="Ville / Code postal" required>
 
-      <label>Puissance souhaitée (kWc)</label>
-      <input type="number" name="puissance" min="1" required>
+        <label for="puissance">Surface disponible ou puissance estimée</label>
+        <select name="puissance" id="puissance" required>
+          <option value="">-- Sélectionnez --</option>
+          <option value="petite">50 à 100 m² (≈ 10 à 20 kWc)</option>
+          <option value="moyenne">100 à 250 m² (≈ 20 à 50 kWc)</option>
+          <option value="grande">250 à 500 m² (≈ 50 à 100 kWc)</option>
+          <option value="tres-grande">+500 m² (projets > 100 kWc)</option>
+          <option value="autre">Autre (à préciser dans le message)</option>
+        </select>
 
-      <label>Coordonnées professionnelles</label>
-      <input type="text" name="nom" placeholder="Nom / Société" required>
-      <input type="email" name="email" placeholder="Email professionnel" required>
-      <input type="tel" name="tel" placeholder="Téléphone" required>
+        <label for="message">Précisions complémentaires</label>
+        <textarea id="message" name="message" rows="4" placeholder="Expliquez votre projet..."></textarea>
 
-      <label>Message complémentaire (optionnel)</label>
-      <textarea name="message"></textarea>
+        <label for="email">Votre email professionnel</label>
+        <input type="email" id="email" name="email" required>
 
-      <button type="submit" class="btn-cta">✅ Envoyer ma demande</button>
-    </form>
-    <p class="confidentialite">
-      🔒 Vos données sont strictement confidentielles et utilisées uniquement pour votre demande d’étude.
-    </p>
+        <label for="tel">Téléphone</label>
+        <input type="tel" id="tel" name="tel" required>
+
+        <button type="submit" class="cta">Envoyer ma demande</button>
+      </form>
+      <p class="confidentialite">Vos données resteront strictement confidentielles et ne seront jamais partagées.</p>
+    </div>
   </section>
 
   <!-- FOOTER -->
   <footer class="footer">
-    <div class="footer-top">
+    <div class="container footer-grid">
+      
       <div class="footer-col">
         <h3>Échome Énergies</h3>
-        <p>1159 Rue de la Galandrine<br>38210 Saint-Quentin-sur-Isère</p>
-        <p>📞 <a href="tel:0476373462">04 76 37 34 62</a><br>
-        ✉️ <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
+        <p>ZI La Galicière<br>38210 Saint-Quentin-sur-Isère</p>
+        <p>Tél : <a href="tel:0476373462">04 76 37 34 62</a></p>
+        <p>Email : <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
       </div>
 
       <div class="footer-col">
-        <h3>Certifications</h3>
+        <h3>Nos certifications</h3>
         <div class="certifications">
-          <img src="logo-rge.png" alt="Certification RGE">
+          <img src="logo-rge.png" alt="RGE">
           <img src="logo-qualipv500.png" alt="QualiPV 500">
           <img src="logo-recharge-elec.png" alt="Recharge Elec+">
         </div>
-        <p class="cert-text">Votre garantie d’un partenaire fiable et qualifié.</p>
+        <a href="https://www.qualit-enr.org/entreprises/echome-energies/" target="_blank">Voir nos certifications</a>
       </div>
 
       <div class="footer-col">
@@ -104,16 +110,11 @@
           <li><a href="mentions-legales.html">Mentions légales</a></li>
           <li><a href="politique-confidentialite.html">Politique de confidentialité</a></li>
         </ul>
-        <div class="socials">
-          <a href="https://www.linkedin.com/company/echome-energies" target="_blank">LinkedIn</a> |
-          <a href="https://www.facebook.com/profile.php?id=61563413785578" target="_blank">Facebook</a> |
-          <a href="https://www.instagram.com/echomenergies" target="_blank">Instagram</a>
-        </div>
       </div>
     </div>
 
     <div class="footer-bottom">
-      <p>&copy; 2025 Échome Énergies – Partenaire certifié pour vos projets solaires</p>
+      <p>&copy; 2025 Échome Énergies – Solutions photovoltaïques professionnelles</p>
     </div>
   </footer>
 
