--- a/index.html
+++ b/index.html
@@ -3,88 +3,156 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Echome Energies – Étude photovoltaïque sur-mesure</title>
-  <link rel="stylesheet" href="../landing/style.css">
+  <title>Echome Energies – Solutions photovoltaïques pour professionnels</title>
+  <link rel="stylesheet" href="style.css">
+  <!-- Google reCAPTCHA v2 -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <style>
-    /* Formulaire spécifique B2B */
-    .form-section { padding:60px 20px; background:#f7f7f7; }
-    form { max-width:700px; margin:0 auto; background:#fff; padding:30px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); }
-    label { display:block; margin-top:15px; font-weight:bold; }
-    input, select, textarea { width:100%; padding:10px; margin-top:5px; border-radius:6px; border:1px solid #ccc; font-size:1rem; }
-    textarea { resize:vertical; }
-    button.cta { background:#0078d7; color:#fff; padding:15px 30px; font-size:1.2rem; border:none; border-radius:12px; margin-top:20px; cursor:pointer; box-shadow:0 4px 10px rgba(0,0,0,0.2); transition:0.3s; }
-    button.cta:hover { transform:translateY(-3px); box-shadow:0 6px 15px rgba(0,0,0,0.25); }
-    .confidentialite { margin-top:15px; font-size:0.9rem; color:#555; display:flex; align-items:center; gap:8px; }
-    .confidentialite img { width:16px; height:16px; }
-    input[type="range"] { width:100%; margin-top:10px; }
-    output { display:block; text-align:right; margin-top:5px; font-weight:bold; }
-  </style>
 </head>
 <body>
 
-<section class="form-section">
-  <div class="container">
-    <h2>Obtenez votre étude photovoltaïque sur-mesure</h2>
-    <p>Indiquez vos informations pour recevoir une estimation personnalisée et adaptée à votre projet professionnel.</p>
+  <!-- HERO -->
+  <header class="hero">
+    <div class="hero-overlay">
+      <img src="logo.png" alt="Echome Energies" class="logo">
+      <div class="hero-content">
+        <h1>Un investissement durable, une rentabilité immédiate</h1>
+        <p>Recevez votre étude gratuite et personnalisée.<br>Réponse garantie sous 48h par un expert Echome Energies.</p>
+        <a href="#formulaire" class="cta">Demander mon étude</a>
+      </div>
+    </div>
+  </header>
 
-    <form action="https://formspree.io/f/your-id" method="POST">
+  <!-- INTRO -->
+  <section class="intro">
+    <div class="container">
+      <h2>Des solutions solaires pensées pour les entreprises et collectivités</h2>
+      <p>Ombrières, toitures industrielles, bâtiments tertiaires…  
+         Nos experts vous accompagnent de l’étude jusqu’à l’installation, avec un suivi complet et certifié RGE.</p>
+    </div>
+  </section>
 
-      <label for="structure">Type de structure</label>
-      <select name="structure" id="structure" required>
-        <option value="">-- Sélectionnez --</option>
-        <option value="entreprise">Entreprise</option>
-        <option value="collectivite">Collectivité</option>
-        <option value="artisan">Artisan</option>
-        <option value="promoteur">Promoteur</option>
-        <option value="autre">Autre</option>
-      </select>
+  <!-- FORMULAIRE -->
+  <section id="formulaire" class="form-section">
+    <div class="container">
+      <h2>Demandez votre étude gratuite</h2>
+      <form action="https://formspree.io/f/your-id" method="POST">
 
-      <label for="batiment">Type de bâtiment</label>
-      <select name="batiment" id="batiment" required>
-        <option value="">-- Sélectionnez --</option>
-        <option value="industriel">Industriel</option>
-        <option value="tertiaire">Tertiaire</option>
-        <option value="agricole">Agricole</option>
-        <option value="autre">Autre</option>
-      </select>
+        <label for="structure">Type de structure</label>
+        <select name="structure" id="structure" required>
+          <option value="">-- Sélectionnez --</option>
+          <option value="entreprise">Entreprise</option>
+          <option value="collectivite">Collectivité</option>
+          <option value="artisan">Artisan</option>
+          <option value="promoteur">Promoteur</option>
+          <option value="autre">Autre</option>
+        </select>
 
-      <label for="localisation">Localisation du projet</label>
-      <input type="text" id="localisation" name="localisation" placeholder="Ville / Code postal" required>
+        <label for="batiment">Type de bâtiment</label>
+        <select name="batiment" id="batiment" required>
+          <option value="">-- Sélectionnez --</option>
+          <option value="industriel">Industriel</option>
+          <option value="tertiaire">Tertiaire</option>
+          <option value="agricole">Agricole</option>
+          <option value="autre">Autre</option>
+        </select>
 
-      <label for="puissance">Puissance souhaitée (kWc)</label>
-      <input type="range" id="puissance" name="puissance" min="10" max="200" step="5" value="50" oninput="puissanceOutput.value = puissance.value + ' kWc'">
-      <output id="puissanceOutput">50 kWc</output>
+        <label for="localisation">Localisation du projet</label>
+        <input type="text" id="localisation" name="localisation" placeholder="Ville / Code postal" required>
 
-      <label for="message">Précisions complémentaires</label>
-      <textarea id="message" name="message" rows="4" placeholder="Expliquez votre projet..."></textarea>
+        <!-- SLIDER PUISSANCE -->
+        <label for="surface">Surface disponible (m²)</label>
+        <div class="slider-wrapper">
+          <input type="range" id="surface" name="surface" min="50" max="1500" step="10" value="100" oninput="updatePuissance()">
+          <span id="puissanceBadge" class="puissance-badge">20 kWc</span>
+        </div>
+        <output id="surfaceValue">100</output> m²
+        <input type="hidden" id="puissance" name="puissance">
 
-      <label for="email">Votre email professionnel</label>
-      <input type="email" id="email" name="email" required>
+        <label for="message">Précisions complémentaires</label>
+        <textarea id="message" name="message" rows="4" placeholder="Expliquez votre projet..."></textarea>
 
-      <label for="tel">Téléphone</label>
-      <input type="tel" id="tel" name="tel" required>
+        <label for="email">Votre email professionnel</label>
+        <input type="email" id="email" name="email" required>
 
-      <!-- CAPTCHA -->
-      <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY"></div>
+        <label for="tel">Téléphone</label>
+        <input type="tel" id="tel" name="tel" required>
 
-      <button type="submit" class="cta">Envoyer ma demande</button>
+        <!-- reCAPTCHA -->
+        <div class="recaptcha-container">
+          <div class="g-recaptcha" data-sitekey="TON_SITE_KEY"></div>
+        </div>
 
-      <p class="confidentialite">
-        <img src="../assets/cadenas.png" alt="Confidentialité"> Vos données resteront strictement confidentielles et ne seront jamais partagées.
-      </p>
-    </form>
-  </div>
-</section>
+        <button type="submit" class="cta">Obtenir mon étude gratuite</button>
+      </form>
 
-<script>
-  const puissance = document.getElementById('puissance');
-  const puissanceOutput = document.getElementById('puissanceOutput');
-  puissanceOutput.value = puissance.value + " kWc";
-  puissance.addEventListener('input', () => {
-    puissanceOutput.value = puissance.value + " kWc";
-  });
-</script>
+      <p class="confidentialite"><span class="lock-icon">🔒</span> Vos données resteront strictement confidentielles et ne seront jamais partagées.</p>
+    </div>
+  </section>
 
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div class="footer-col">
+        <h3>Echome Energies</h3>
+        <p>ZI La Galicière<br>38210 Saint-Quentin-sur-Isère</p>
+        <p>Tél : <a href="tel:0476373462">04 76 37 34 62</a></p>
+        <p>Email : <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
+      </div>
+
+      <div class="footer-col">
+        <h3>Nos certifications</h3>
+        <div class="certifications">
+          <img src="logo-rge.png" alt="RGE">
+          <img src="logo-qualipv500.png" alt="QualiPV 500">
+          <img src="logo-recharge-elec.png" alt="Recharge Elec+">
+        </div>
+        <a href="https://www.qualit-enr.org/entreprises/echome-energies/" target="_blank">Voir nos certifications</a>
+      </div>
+
+      <div class="footer-col">
+        <h3>Liens utiles</h3>
+        <ul>
+          <li><a href="cgv.html">Conditions Générales de Vente</a></li>
+          <li><a href="mentions-legales.html">Mentions légales</a></li>
+          <li><a href="politique-confidentialite.html">Politique de confidentialité</a></li>
+        </ul>
+        <div class="social-links">
+          <a href="#" target="_blank">LinkedIn</a> |
+          <a href="#" target="_blank">Facebook</a> |
+          <a href="#" target="_blank">Twitter</a>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2025 Echome Energies – Solutions photovoltaïques professionnelles</p>
+    </div>
+  </footer>
+
+  <script>
+    function updatePuissance() {
+      const surface = parseInt(document.getElementById('surface').value);
+      document.getElementById('surfaceValue').textContent = surface;
+      let puissance = Math.round(surface / 5);
+      document.getElementById('puissance').value = puissance;
+
+      const slider = document.getElementById('surface');
+      const badge = document.getElementById('puissanceBadge');
+      badge.textContent = puissance + ' kWc';
+
+      const min = parseInt(slider.min);
+      const max = parseInt(slider.max);
+      const percent = (surface - min) / (max - min);
+      badge.style.left = `calc(${percent * 100}% - ${badge.offsetWidth/2}px)`;
+
+      if(surface <= 250) badge.style.backgroundColor = '#4CAF50';
+      else if(surface <= 500) badge.style.backgroundColor = '#FFC107';
+      else badge.style.backgroundColor = '#F44336';
+
+      badge.classList.remove('bounce');
+      void badge.offsetWidth;
+      badge.classList.add('bounce');
+    }
+    updatePuissance();
+  </script>
 </body>
 </html>
