--- a/index.html
+++ b/index.html
@@ -3,18 +3,74 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Echome Energies – Solutions photovoltaïques pour professionnels</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Échome Énergies – Solutions photovoltaïques pour professionnels</title>
+  <style>
+    /* Global */
+    body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f7f7f7; color:#333; }
+    a { text-decoration:none; color: inherit; }
+    h1,h2,h3 { margin:0; }
+    .container { max-width:1100px; margin:0 auto; padding:20px; }
+
+    /* HERO */
+    .hero { position:relative; height:90vh; background:url('hero-bg.jpg') center/cover no-repeat; display:flex; align-items:center; justify-content:center; color:#fff; text-align:center; }
+    .hero-overlay { background:rgba(0,0,0,0.5); width:100%; height:100%; display:flex; flex-direction:column; align-items:center; justify-content:center; padding:20px; }
+    .hero img.logo { width:150px; margin-bottom:20px; }
+    .hero-content h1 { font-size:2.5rem; margin-bottom:15px; }
+    .hero-content p { font-size:1.2rem; margin-bottom:20px; }
+    .cta { background:#0078d7; color:#fff; padding:12px 25px; border-radius:8px; display:inline-block; transition:0.3s; }
+    .cta:hover { background:#005fa3; }
+
+    /* INTRO */
+    .intro { background:#fff; padding:60px 20px; text-align:center; }
+    .intro h2 { font-size:2rem; margin-bottom:15px; }
+    .intro p { font-size:1.1rem; max-width:800px; margin:0 auto; line-height:1.6; }
+
+    /* FORMULAIRE */
+    .form-section { background:#e8f0f8; padding:60px 20px; }
+    .form-section h2 { text-align:center; font-size:2rem; margin-bottom:40px; }
+
+    form { max-width:700px; margin:0 auto; background:#fff; padding:30px; border-radius:12px; box-shadow:0 4px 15px rgba(0,0,0,0.1); }
+
+    label { display:block; margin:15px 0 5px; font-weight:bold; }
+    input, select, textarea { width:100%; padding:10px; border-radius:6px; border:1px solid #ccc; font-size:1em; box-sizing:border-box; }
+    textarea { resize:vertical; }
+
+    button.cta { width:100%; padding:12px; margin-top:20px; background:#0078d7; color:#fff; font-size:1.1em; border:none; border-radius:8px; cursor:pointer; transition:0.3s; }
+    button.cta:hover { background:#005fa3; }
+
+    .confidentialite { font-size:0.85em; color:#666; text-align:center; margin-top:15px; }
+
+    /* SLIDER */
+    .slider-wrapper { position:relative; width:100%; margin:20px 0; }
+    input[type="range"] { width:100%; -webkit-appearance:none; height:12px; border-radius:6px; background:#ddd; outline:none; }
+    input[type="range"]::-webkit-slider-thumb { -webkit-appearance:none; width:20px; height:20px; border-radius:50%; background:#555; cursor:pointer; position:relative; z-index:2; }
+    .puissance-badge { position:absolute; top:-35px; padding:5px 10px; border-radius:12px; color:#fff; font-weight:bold; pointer-events:none; transform:translateX(-50%); transition:left 0.1s, background-color 0.2s; }
+    .puissance-badge.bounce { animation:bounce 0.3s ease-out; }
+    @keyframes bounce { 0%{transform:translateX(-50%) translateY(0);}50%{transform:translateX(-50%) translateY(-10px);}100%{transform:translateX(-50%) translateY(0);} }
+    output { font-weight:bold; margin-left:5px; }
+
+    /* FOOTER */
+    footer { background:#222; color:#fff; padding:40px 20px; }
+    .footer-grid { display:flex; flex-wrap:wrap; gap:20px; }
+    .footer-col { flex:1; min-width:200px; }
+    .footer-col h3 { margin-bottom:10px; }
+    .footer-col a { color:#fff; transition:0.3s; }
+    .footer-col a:hover { color:#0078d7; }
+    .footer-bottom { text-align:center; margin-top:20px; font-size:0.9em; color:#aaa; }
+
+    /* Responsive */
+    @media(max-width:768px){ .hero-content h1{font-size:2rem;} .hero-content p{font-size:1rem;} .intro h2{font-size:1.7rem;} }
+  </style>
 </head>
 <body>
 
   <!-- HERO -->
   <header class="hero">
     <div class="hero-overlay">
-      <img src="logo.png" alt="Echome Energies" class="logo">
+      <img src="logo.png" alt="Échome Énergies" class="logo">
       <div class="hero-content">
         <h1>Un investissement durable, une rentabilité immédiate</h1>
-        <p>Recevez votre étude gratuite et personnalisée.<br>Réponse garantie sous 48h par un expert Echome Energies.</p>
+        <p>Recevez votre étude gratuite et personnalisée.<br>Réponse garantie sous 48h par un expert Échome Énergies.</p>
         <a href="#formulaire" class="cta">Demander mon étude</a>
       </div>
     </div>
@@ -77,71 +133,4 @@
 
         <button type="submit" class="cta">Envoyer ma demande</button>
       </form>
-      <p class="confidentialite">Vos données resteront strictement confidentielles et ne seront jamais partagées.</p>
-    </div>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="container footer-grid">
-      <div class="footer-col">
-        <h3>Echome Energies</h3>
-        <p>ZI La Galicière<br>38210 Saint-Quentin-sur-Isère</p>
-        <p>Tél : <a href="tel:0476373462">04 76 37 34 62</a></p>
-        <p>Email : <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
-      </div>
-
-      <div class="footer-col">
-        <h3>Nos certifications</h3>
-        <div class="certifications">
-          <img src="logo-rge.png" alt="RGE">
-          <img src="logo-qualipv500.png" alt="QualiPV 500">
-          <img src="logo-recharge-elec.png" alt="Recharge Elec+">
-        </div>
-        <a href="https://www.qualit-enr.org/entreprises/echome-energies/" target="_blank">Voir nos certifications</a>
-      </div>
-
-      <div class="footer-col">
-        <h3>Liens utiles</h3>
-        <ul>
-          <li><a href="cgv.html">Conditions Générales de Vente</a></li>
-          <li><a href="mentions-legales.html">Mentions légales</a></li>
-          <li><a href="politique-confidentialite.html">Politique de confidentialité</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="footer-bottom">
-      <p>&copy; 2025 Echome Energies – Solutions photovoltaïques professionnelles</p>
-    </div>
-  </footer>
-
-  <script>
-    function updatePuissance() {
-      const surface = parseInt(document.getElementById('surface').value);
-      document.getElementById('surfaceValue').textContent = surface;
-      let puissance = Math.round(surface / 5);
-      document.getElementById('puissance').value = puissance;
-
-      const slider = document.getElementById('surface');
-      const badge = document.getElementById('puissanceBadge');
-      badge.textContent = puissance + ' kWc';
-
-      const min = parseInt(slider.min);
-      const max = parseInt(slider.max);
-      const percent = (surface - min) / (max - min);
-      badge.style.left = `calc(${percent * 100}% - ${badge.offsetWidth/2}px)`;
-
-      if(surface <= 250) badge.style.backgroundColor = '#4CAF50';
-      else if(surface <= 500) badge.style.backgroundColor = '#FFC107';
-      else badge.style.backgroundColor = '#F44336';
-
-      badge.classList.remove('bounce');
-      void badge.offsetWidth;
-      badge.classList.add('bounce');
-    }
-    updatePuissance();
-  </script>
-
-</body>
-</html>
+      <p class="confidentialite">Vos données resteront strictement confidentielles et ne seront jamais partagées.</p
