--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <input type="tel" id="tel" name="tel" required>
 
 <!-- CAPTCHA -->
-<div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY"></div>
+<div class="g-recaptcha" data-sitekey="6Letqa0rAAAAAFXWiBwhwkZUEkcTfsZd802QdUtu"></div>
 
 <button type="submit" class="cta pulse">Envoyer ma demande</button>
 
