--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 <!-- HERO -->
 <header class="hero">
   <div class="hero-overlay">
-    <img src="assets/logo.png" alt="Echome Energies" class="logo">
-    <h1>Obtenez votre étude photovoltaïque sur-mesure</h1>
-    <p>Estimation rapide adaptée à votre projet professionnel</p>
+    <img src="logo.png" alt="Echome Energies" class="logo">
+    <div class="hero-content">
+      <h1>Un investissement durable, une rentabilité immédiate</h1>
+      <p>Recevez votre étude gratuite et personnalisée.<br>Réponse garantie sous 48h par un expert Echome Energies.</p>
+      <a href="#formulaire" class="cta">Demander mon étude</a>
+    </div>
   </div>
 </header>
 
