--- a/index.html
+++ b/index.html
@@ -84,13 +84,16 @@
     <p>Email : <a href="mailto:contact@echome-energies.fr">contact@echome-energies.fr</a></p>
   </div>
   <div class="footer-col">
-    <h3>Nos certifications</h3>
-    <div class="certifications">
-      <img src="assets/logo-rge.png" alt="RGE">
-      <img src="assets/logo-qualipv500.png" alt="QualiPV 500">
-      <img src="assets/logo-recharge-elec.png" alt="Recharge Elec+">
-    </div>
+  <h3>Nos certifications</h3>
+  <div class="certifications">
+    <img src="logo-rge.png" alt="RGE">
+    <img src="logo-qualipv500.png" alt="QualiPV 500">
+    <img src="logo-recharge-elec.png" alt="Recharge Elec+">
   </div>
+  <a href="https://www.qualit-enr.org/entreprises/echome-energies/" target="_blank">
+    Voir nos certifications
+  </a>
+</div>
   <div class="footer-col">
     <h3>Liens utiles</h3>
     <ul>
