--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
 
         <!-- Slider Puissance -->
         <label for="puissance">Puissance souhaitée (kWc)</label>
-        <input type="range" id="puissance" name="puissance" min="10" max="500" step="10" value="50">
-        <div id="puissance-value">50 kWc</div>
+<div class="slider-container">
+  <input type="range" id="puissance" name="puissance" min="10" max="500" step="10" value="50">
+  <div id="bubble">50 kWc</div>
+</div>
+
 
         <label for="message">Précisions complémentaires</label>
         <textarea id="message" name="message" rows="4" placeholder="Expliquez votre projet..."></textarea>
